Closed
Bug 1740513
Opened 4 years ago
Closed 4 years ago
`nsIMacUserActivityUpdater.updateLocation` raises error in `_updateMacUserActivity`, breaking mochitests when running in `--headless` mode
Categories
(Firefox :: Messaging System, defect, P1)
Firefox
Messaging System
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox94 | --- | unaffected |
| firefox95 | --- | unaffected |
| firefox96 | --- | fixed |
People
(Reporter: andreio, Assigned: andreio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
browser_asrouter_group_frequency (and 1 more) is failing in headless mode at least on mac.
Updated•4 years ago
|
Has Regression Range: --- → yes
| Assignee | ||
Comment 1•4 years ago
•
|
||
0:06.30 INFO TEST-INFO | (browser-test.js) | Console message: [JavaScript Error: "[Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMacUserActivityUpdater.updateLocation]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://browser/content/browser.js :: _updateMacUserActivity :: line 5593" data: no]"]
_updateMacUserActivity@chrome://browser/content/browser.js:5593:28
onLocationChange@chrome://browser/content/browser.js:5481:10
callListeners@chrome://browser/content/tabbrowser.js:899:31
_callProgressListeners@chrome://browser/content/tabbrowser.js:913:22
updateCurrentBrowser@chrome://browser/content/tabbrowser.js:1122:12
_setupEventListeners/<@chrome://browser/content/tabbrowser.js:5612:16
set selectedIndex@chrome://global/content/elements/tabbox.js:202:14
set selectedPanel@chrome://global/content/elements/tabbox.js:220:7
set selectedIndex@chrome://global/content/elements/tabbox.js:544:11
set selectedItem@chrome://global/content/elements/tabbox.js:563:35
set selectedTab@chrome://global/content/elements/tabbox.js:85:11
set selectedTab@chrome://browser/content/tabbrowser.js:311:7
_blurTab@chrome://browser/content/tabbrowser.js:4092:31
_beginRemoveTab@chrome://browser/content/tabbrowser.js:3734:14
removeTab@chrome://browser/content/tabbrowser.js:3602:15
Tester_waitForWindowsState@chrome://mochikit/content/browser-test.js:422:16
nextTest@chrome://mochikit/content/browser-test.js:826:10
Tester_start/<@chrome://mochikit/content/browser-test.js:337:14
In --headless mode the updateUserMacActivity fn call fails and the call to updatePageActions never happens anymore.
Flags: needinfo?(htwyford)
Updated•4 years ago
|
Keywords: regression
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1525788
status-firefox94:
--- → unaffected
status-firefox95:
--- → unaffected
status-firefox96:
--- → affected
status-firefox-esr91:
--- → unaffected
Updated•4 years ago
|
Summary: Broken mochitests when running in headless mode → `nsIMacUserActivityUpdater.updateLocation` raises error in `_updateMacUserActivity`, breaking mochitests when running in `--headless` mode
Comment 3•4 years ago
|
||
Pushed by nalexander@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f624e22a00ce
Don't attempt macOS Handoff in headless mode. r=mstange
Comment 5•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Updated•4 years ago
|
Flags: needinfo?(htwyford)
Updated•4 years ago
|
Iteration: --- → 96.2 - Nov 15 - Nov 28
You need to log in
before you can comment on or make changes to this bug.
Description
•