Bug 1740513 - Don't attempt macOS Handoff in headless mode. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D132090